fission-route.yml
apiVersion: v1
kind: Service
metadata:
  name: router
  namespace: fission
  labels:
    svc: router
spec:
  ports:
  - port: 80
    targetPort: 8888
  selector:
    svc: router

---
apiVersion: v1
kind: Service
metadata:
  name: controller
  namespace: fission
  labels:
    svc: controller
spec:
  ports:
  - port: 80
    targetPort: 8888
  selector:
    svc: controller

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    k8s-app: fission-router
  name: fission-router
  namespace: fission
spec:
  rules:
    - host: fission-router.cloudapps.cloud-cafe.in
      http:
        paths:
          - backend:
              serviceName: router
              servicePort: 8888

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    k8s-app: fission-controller
  name: fission-controller
  namespace: fission
spec:
  rules:
    - host: fission-controller.cloudapps.cloud-cafe.in
      http:
        paths:
          - backend:
              serviceName: controller
              servicePort: 8888
