fission-ui.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fission-ui
  namespace: fission
spec:
  replicas: 1
  template:
    metadata:
      labels:
        svc: fission-ui
    spec:
      containers:
      - name: nginx
        image: yqf3139/fission-ui:latest
        command: ["bash"]
        args: ["/run.sh"]
      - name: kubectl-proxy
        image: lachlanevenson/k8s-kubectl
        args: ["proxy", "--port", "8001", "--address", "127.0.0.1"]

---
apiVersion: v1
kind: Service
metadata:
  name: fission-ui
  namespace: fission
  labels:
    svc: fission-ui
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    svc: fission-ui

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    k8s-app: fission-ui
  name: fission-ui
  namespace: fission
spec:
  rules:
    - host: fission-ui.cloudapps.cloud-cafe.in
      http:
        paths:
          - backend:
              serviceName: fission-ui
              servicePort: 80
